--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -74,3 +74,14 @@ $fondoFooter: #080b13;
 
 
 
+/*FOndos secciones empresas*/
+@mixin sectionEmpresas ($fondosEmpresas) {
+    
+    background: url($fondosEmpresas) no-repeat fixed center center #333;
+    height:100%;
+    background-size: cover;
+    margin-top: 15px;
+}
+
+
+
