--- a/estilos/_mediaqueris.scss
+++ b/estilos/_mediaqueris.scss
@@ -69,7 +69,7 @@
 
     }
 
-    .section__chevallier p {
+    .section__chevallier__div--parrafo {
         font-family: $fuente2;
         color: white;
         font-size: 1rem;
