--- a/estilos/_main.scss
+++ b/estilos/_main.scss
@@ -292,15 +292,14 @@ section {
 
 .section__formulario {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     background-color: map-get($colores, formulariofondo)
 }
 
 .formulario {
-    padding: 50px;
-    
-    
+    padding: 20px;
+    margin-top: 30px;
+    box-shadow: 0 0 15px 10px rgb(247,16,227);
     height: fit-content;
     font-size: 20px;
     
@@ -308,6 +307,6 @@ section {
 
 .formulario_titulo {
     text-align: center;
-    font-size: 200px;
+    font-size: 100px;
     @include efectoNeon(rgb(247, 16, 227))
 }
