--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -318,7 +318,6 @@ section {
 /*Formulario*/
 .main__formulario {
   color: white;
-  margin-top: 100px;
 }
 
 .section__formulario {
@@ -328,8 +327,11 @@ section {
 }
 
 .formulario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 20px;
-  margin-top: 30px;
+  margin-top: 150px;
   box-shadow: 0 0 15px 10px rgb(247, 16, 227);
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -459,5 +461,18 @@ footer {
 @media screen and (max-width: 876px) {
   .section__chevallier p {
     font-size: 1rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .section__chevallier p {
+    font-size: 16px;
+  }
+  .formulario_titulo {
+    text-align: center;
+    font-size: 50px;
+    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px rgb(247, 16, 227), 0 0 80px white, 0 0 120px white;
+  }
+  .formulario {
+    padding: 0px;
   }
 }/*# sourceMappingURL=estilo.css.map */
