ajuste el fomr 1.28

--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -475,4 +475,7 @@ footer {
   .formulario {
     padding: 0px;
   }
+  .iconos__footer {
+    font-size: 40px;
+  }
 }/*# sourceMappingURL=estilo.css.map */
