dia de entrega 1.29

--- a/estilos/_configuracion.scss
+++ b/estilos/_configuracion.scss
@@ -1,3 +1,7 @@
+/*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
+
+
+
 /*Colores*/
 $colores : (rojo : red,
     azul : blue,
