--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
 /*Colores*/
 /*Section Hero*/
 /*tamaño de fuentes*/
@@ -29,6 +30,7 @@
   border-radius: 10px;
 }
 
+/*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
 /*Colores*/
 /*Section Hero*/
 /*tamaño de fuentes*/
@@ -70,6 +72,7 @@ h5 {
   font-size: 20px;
 }
 
+/*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
 /*Colores*/
 /*Section Hero*/
 /*tamaño de fuentes*/
@@ -345,6 +348,7 @@ section {
   text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px rgb(247, 16, 227), 0 0 80px white, 0 0 120px white;
 }
 
+/*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
 /*Colores*/
 /*Section Hero*/
 /*tamaño de fuentes*/
@@ -391,6 +395,7 @@ footer {
   grid-area: 3/1/4/2;
 }
 
+/*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
 /*Colores*/
 /*Section Hero*/
 /*tamaño de fuentes*/
