dia de entrega 1.30

--- a/estilos/_main.scss
+++ b/estilos/_main.scss
@@ -294,7 +294,10 @@ section {
     display: flex;
     justify-content: center;
     
-    background-color: map-get($colores, formulariofondo)
+    background : url("../assets/pexels-alex-andrews-821754.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .formulario {
