--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -326,7 +326,10 @@ section {
 .section__formulario {
   display: flex;
   justify-content: center;
-  background-color: #16213a;
+  background: url("../assets/pexels-alex-andrews-821754.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .formulario {
