--- a/estilos/_main.scss
+++ b/estilos/_main.scss
@@ -77,12 +77,12 @@ section {
 
 .h2__urquiza:hover {
     color: rgb(253, 253, 253);
-    @include efectoNeon(red)
+    @include efectoNeon(blue)
 }
 
 .h2__empArg:hover {
     color: rgb(253, 253, 253);
-    @include efectoNeon(red)
+    @include efectoNeon(rgb(40, 192, 184))
 }
 
 
@@ -304,6 +304,7 @@ section {
 }
 
 .formulario {
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -313,6 +314,7 @@ section {
     height: fit-content;
     font-size: 20px;
     border-radius: 15px;
+    background-color: rgba($color: #463e3e7c, $alpha: 1.0);
 }
 
 .formulario_titulo {
@@ -322,3 +324,7 @@ section {
     @include efectoNeon(rgb(0, 0, 0))
 }
 
+.btn-formulario {
+    border-radius: 5px;
+     
+}
