--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -26,7 +26,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: aqua;
+  background-color: rgb(0, 0, 0);
   border-radius: 10px;
 }
 
@@ -157,12 +157,12 @@ section {
 
 .h2__urquiza:hover {
   color: rgb(253, 253, 253);
-  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px red, 0 0 80px white, 0 0 120px white;
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px blue, 0 0 80px white, 0 0 120px white;
 }
 
 .h2__empArg:hover {
   color: rgb(253, 253, 253);
-  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px red, 0 0 80px white, 0 0 120px white;
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px rgb(40, 192, 184), 0 0 80px white, 0 0 120px white;
 }
 
 .div__blur {
@@ -327,7 +327,7 @@ section {
 }
 
 .main__formulario {
-  color: rgb(102, 102, 102);
+  color: rgb(255, 255, 255);
 }
 
 .section__formulario {
@@ -347,12 +347,17 @@ section {
   height: fit-content;
   font-size: 20px;
   border-radius: 15px;
+  background-color: #463e3e;
 }
 
 .formulario_titulo {
   text-align: center;
   font-size: 100px;
   text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px rgb(0, 0, 0), 0 0 80px white, 0 0 120px white;
+}
+
+.btn-formulario {
+  border-radius: 5px;
 }
 
 /*Configuraciones para controlar estilos basicos de la pagina mas facilmente*/
@@ -474,6 +479,10 @@ footer {
     font-size: 1rem;
   }
 }
+.section__titulo {
+  padding-top: 50px;
+}
+
 @media screen and (max-width: 480px) {
   .section__chevallier p {
     font-size: 16px;
