--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -10,7 +10,7 @@
     background-color: map-get($colores, macro );
 }
 *::-webkit-scrollbar-thumb{
-    background-color: aqua;
+    background-color: rgb(0, 0, 0);
     border-radius: 10px;
 }
 @import "./footer";
